# veterinary-clinic

./: main.py  pyproject.toml
app/data/: files_actions.py  list_files.py
app/files/: animals.json  curve_animals.json  reviews.json
app/forms/: animal.py
app/keyboards/: animals.py  global_menu.py
app/routers/: animals.py  reviews.py  start  start.py
