[tool.poetry]
name = "veterinary clinic"
version = "0.1.0"
description = "vet system"
authors = ["Mykola322 <mikolasutij2009@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
aiogram = "^3.13.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
